# UnDOS

./: .clang-format  .gitignore  CMakeLists.txt  README.md  SUBSYSTEMS.md  SYSCALLS_IDL.md  find-symbol.sh  grub.cfg.in  i686-toolchain.cmake  run-qemu.sh
DockerGccCross/: Dockerfile
cmake/: AddDriver.cmake  AddHal.cmake  CPM.cmake  CompilerWarnings.cmake  PreventInSourceBuilds.cmake  Utilities.cmake  VCEnvironment.cmake
drivers/: CMakeLists.txt  driver.ld
hosted_test/: CMakeLists.txt  README.md
hosted_test/tests/: CMakeLists.txt  array_test.cpp  device_type_test.cpp  disk_fake_test.cpp  error_code_test.cpp  expected_test.cpp  fat_short_name_test.cpp  format_test.cpp  kernel_host_stubs.cpp  kernel_host_vmm_stubs.cpp  ob_test_support.hpp  object_manager_test.cpp  panic.cpp  pnp_test_hooks.hpp  resource_arbiter_test.cpp  scheduler_test.cpp  static_identifier_test.cpp  str_test.cpp  subsystem_object_test.cpp  unique_ptr_test.cpp  vfs_fat_integration_test.cpp  vfs_test.cpp  vmm_test.cpp  volume_manager_test.cpp
kernel/: CMakeLists.txt  linker.ld
kernel/src/: Core.hpp  Object.hpp  atexit.cpp  dma_manager.cpp  driver_loader.cpp  driver_loader.hpp  elf_loader.cpp  elf_loader.hpp  elf_segment_loader.cpp  elf_segment_loader.hpp  event_dispatcher.cpp  event_dispatcher.hpp  io.cpp  main.cpp  memchr.cpp  object_manager.cpp  object_manager.hpp  pmm.cpp  pmm.hpp  pnp_manager.cpp  pnp_manager.hpp  process.cpp  process.hpp  process_loader.cpp  process_loader.hpp  resource_manager.cpp  resource_manager.hpp  stdkrn.hpp  strlen.cpp  syscall.cpp  syscall.hpp  time.cpp  user_process.cpp  vfs.cpp  vfs.hpp  vmm.cpp  vmm.hpp
kernel/src/common/: DoubleList.hpp  DoubleListLink.hpp
kernel/src/guard/: guard.cpp
kernel/src/initial/: boot_modules_vfs.cpp  boot_modules_vfs.hpp
kernel/src/memory/: Allocator.cpp  Allocator.hpp  Cache.cpp  Cache.hpp  Layout.cpp  Layout.hpp  Slab.cpp  Slab.hpp  Storage.cpp  Storage.hpp  slab.cpp  slab.hpp
kernel/src/module/: symbol_entry.cpp  symbol_entry.hpp  symbol_table.cpp  symbol_table.hpp
kernel/src/scheduler/: ReadyQueue.hpp  Scheduler.cpp  Scheduler.hpp
kernel/src/syscalls/: __kernel_types.h  handler_syscall.cpp  syscalls.hpp
kernel_api/: CMakeLists.txt
kernel_hal/: CMakeLists.txt  linker.ld
kernel_hal/x86_old/: CMakeLists.txt  README.md  context.cpp  debug_serial.cpp  debug_serial.hpp  gdt.cpp  gdt.hpp  ia32.cpp  ia32.hpp  intr.cpp  intr.hpp  linker.ld  pit.cpp  pit.hpp  pmm.cpp  pmm.hpp  structs.hpp  tss.hpp  vmm.cpp  vmm.hpp
kernel_hal/x86_old/atomic_op/: MemModelToPlatformEnum.hpp  atomic_fetch_add_4.cpp  atomic_fetch_sub_4.cpp
kernel_hal/x86_old/boot/: CMakeLists.txt  README.md  entry.S  linker.ld  multiboot.hpp  trampoline.S  trampoline.cpp
kernel_hal/x86_old/include/arch/: vmm_defs.hpp
libkcpp/: CMakeLists.txt
libkcpp/include/: __config.hpp  algorithm.hpp  array.hpp  atomic.hpp  buffer_string.hpp  char_traits.hpp  chrono.hpp  compare.hpp  concepts.hpp  expected.hpp  functional.hpp  initializer_list.hpp  limits.hpp  memory.hpp  new.hpp  nomm_string.hpp  optional.hpp  ratio.hpp  reverse_iterator.hpp  span.hpp  static_string.hpp  stddef.hpp  strfmt.hpp  string.hpp  string_interface.hpp  string_view.hpp  system_error.hpp  tuple.hpp  type_traits.hpp  utility.hpp
libkcpp/include/__algo/: comp.hpp  comp_ref_type.hpp  max.hpp  max_element.hpp  min.hpp
libkcpp/include/__atomic/: atomic.hpp  memory_order.hpp
libkcpp/include/__chrono/: duration.hpp
libkcpp/include/__compare/: common_comparison_category.hpp  compare_three_way.hpp  compare_three_way_result.hpp  ordering.hpp  synth_three_way.hpp  three_way_comparable.hpp
libkcpp/include/__concepts/: arithmetic.hpp  assignable.hpp  boolean_testable.hpp  class_or_enum.hpp  common_reference_with.hpp  comparison_common_type.hpp  constructible.hpp  convertible_to.hpp  copyable.hpp  derived_from.hpp  destructible.hpp  different_from.hpp  equality_comparable.hpp  invocable.hpp  movable.hpp  predicate.hpp  regular.hpp  relation.hpp  same_as.hpp  semiregular.hpp  swappable.hpp  totally_ordered.hpp
libkcpp/include/__expected/: expected.hpp  unexpect.hpp  unexpected.hpp
libkcpp/include/__functional/: binary_function.hpp  hash.hpp  invoke.hpp  operations.hpp  unary_function.hpp
libkcpp/include/__fwd/: array.hpp  complex.hpp  functional.hpp  get.hpp  memory.hpp  pair.hpp  panic.hpp  subrange.hpp  tuple.hpp  variant.hpp
libkcpp/include/__iterator/: concepts.hpp  incrementable_traits.hpp  iter_move.hpp  iterator_traits.hpp  readable_traits.hpp
libkcpp/include/__memory/: addressof.hpp  allocator_arg_t.hpp  allocator_traits.hpp  array_cookie.hpp  compressed_pair.hpp  construct_at.hpp  default_delete.hpp  pointer_traits.hpp  unique_ptr.hpp  uses_allocator.hpp
libkcpp/include/__new/: launder.hpp  new_handler.hpp
libkcpp/include/__system_error/: error_code.hpp
libkcpp/include/__tuple/: find_index.hpp  ignore.hpp  tuple_element.hpp  tuple_like.hpp  tuple_like_no_subrange.hpp  tuple_size.hpp
libkcpp/include/__type_traits/: add_pointer.hpp  add_reference.hpp  bool_constant.hpp  common_reference.hpp  common_type.hpp  conditional.hpp  conjunction.hpp  copy_cv.hpp  copy_cvref.hpp  decay.hpp  dependent_type.hpp  desugars_to.hpp  detected_or.hpp  disjunction.hpp  enable_if.hpp  extent.hpp  integral_constant.hpp  internal.hpp  invoke.hpp  is_arithmetic.hpp  is_array.hpp  is_assignable.hpp  is_base_of.hpp  is_callable.hpp  is_class.hpp  is_const.hpp  is_constant_evaluated.hpp  is_constructible.hpp  is_convertible.hpp  is_core_convertible.hpp  is_destructible.hpp  is_empty.hpp  is_enum.hpp  is_final.hpp  is_floating_point.hpp  is_function.hpp  is_generic_transparent_comparator.hpp  is_implicitly_default_constructible.hpp  is_integral.hpp  is_member_pointer.hpp  (+41 more)
libkcpp/include/__utility/: byte.hpp  declval.hpp  element_count.hpp  empty.hpp  exchange.hpp  forward.hpp  in_place.hpp  index_sequence.hpp  integer_sequence.hpp  move.hpp  pair.hpp  piecewise_construct.hpp  private_constructor_tag.hpp  swap.hpp  to_underlying.hpp
userland/elf_loader/: CMakeLists.txt  linker.ld  loader.cpp
(+117 files in other folders)
